<resources>
    <string name="app_name">RKU Contacts</string>
    <string name="groups">Groups</string>
    <string name="contacts">Contacts</string>
    <string name="personal">Personal</string>
    <string name="communicate">Communicate</string>
    <string name="share">Share</string>
    <string name="account">Account</string>
    <string name="logout">Logout</string>
    <string name="summary">Summary</string>
    <string name="about">About</string>
    <string name="update">Update</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="profile">Profile</string>
    <string name="select_gender">Select Gender</string>
    <string name="dashboard">Dashboard</string>
    <string name="rkucontacts">RKU Contacts</string>
    <string name="url">https://www.rkuinfo.ml</string>
    <string name="app">App</string>
    <string name="app_version">3</string>
    <string name="aboutus">About Us</string>

</resources>
