<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group>
        <item
            android:id="@+id/dshbrd"
            android:title="@string/dashboard" />
    </group>

    <item android:title="@string/account">
        <menu>
            <item
                android:id="@+id/prfle"
                android:title="@string/profile" />
            <item
                android:id="@+id/s_lgt"
                android:title="@string/logout" />
        </menu>
    </item>

    <item android:title="@string/app">
        <menu>
            <item
                android:id="@+id/updt"
                android:title="@string/update" />
            <item
                android:id="@+id/shr"
                android:title="@string/share" />
            <item
                android:id="@+id/abts"
                android:title="@string/aboutus" />
        </menu>
    </item>
</menu>